--- a/.github/workflows/obf.yml
+++ b/.github/workflows/obf.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches: ["master"]
         paths:
-          - "/*"
+          - "/otp.js"
 
 permissions:
     contents: write
